--- a/blog.html
+++ b/blog.html
@@ -191,7 +191,7 @@
               <li class="grid-item">
                 <div class="card border-0 border-radius-4px box-shadow-quadruple-large">
                   <div class="blog-image">
-                    <a href="blog-detail.html" class="d-block"><img src="https://lipsum.app/600x400" alt="" /></a>
+                    <a href="blog-detail.html" class="d-block"><img src="images/blog/blog.jpg" alt="" /></a>
                   </div>
                   <div class="card-body p-13 md-p-11">
                     <a href="blog-detail.html" class="card-title mb-15px fw-600 fs-20 text-dark-gray d-inline-block">Trends shaping the logistics and transportation industry.</a>
@@ -213,7 +213,7 @@
               <li class="grid-item">
                 <div class="card border-0 border-radius-4px box-shadow-quadruple-large">
                   <div class="blog-image">
-                    <a href="blog-detail.html" class="d-block"><img src="https://lipsum.app/600x400" alt="" /></a>
+                    <a href="blog-detail.html" class="d-block"><img src="images/blog/blog.jpg" alt="" /></a>
                   </div>
                   <div class="card-body p-13 md-p-11">
                     <a href="blog-detail.html" class="card-title mb-15px fw-600 fs-20 text-dark-gray d-inline-block">Technology integration in logistics processes.</a>
@@ -235,7 +235,7 @@
               <li class="grid-item">
                 <div class="card border-0 border-radius-4px box-shadow-quadruple-large">
                   <div class="blog-image">
-                    <a href="blog-detail.html" class="d-block"><img src="https://lipsum.app/600x400" alt="" /></a>
+                    <a href="blog-detail.html" class="d-block"><img src="images/blog/blog.jpg" alt="" /></a>
                   </div>
                   <div class="card-body p-13 md-p-11">
                     <a href="blog-detail.html" class="card-title mb-15px fw-600 fs-20 text-dark-gray d-inline-block">Global trade & logistics and transport strategies.</a>
@@ -252,137 +252,6 @@
                   </div>
                 </div>
               </li>
-              <!-- end blog item -->
-              <li class="grid-item">
-                <div class="card border-0 border-radius-4px box-shadow-quadruple-large">
-                  <div class="blog-image">
-                    <a href="blog-detail.html" class="d-block"><img src="https://lipsum.app/600x400" alt="" /></a>
-                  </div>
-                  <div class="card-body p-13 md-p-11">
-                    <a href="blog-detail.html" class="card-title mb-15px fw-600 fs-20 text-dark-gray d-inline-block">Security measures in supply chain management.</a>
-                    <p>Lorem ipsum has been industry standard dummy text ever...</p>
-                    <div class="author d-flex justify-content-center align-items-center position-relative overflow-hidden fs-16">
-                      <div class="me-auto">
-                        <span class="blog-date d-inline-block text-dark-gray fw-600">30 Jul 2024</span>
-                        <div class="d-inline-block author-name">By <a href="blog-detail.html" class="text-dark-gray text-decoration-line-bottom fw-600">Den viliamson</a></div>
-                      </div>
-                      <div class="like-count fs-15 fw-600">
-                        <a href="blog-detail.html"><i class="fa-regular fa-heart text-red"></i><span class="text-dark-gray align-middle">65</span></a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </li>
-              <!-- end blog item -->
-              <!-- start blog item -->
-              <li class="grid-item">
-                <div class="card border-0 border-radius-4px box-shadow-quadruple-large">
-                  <div class="blog-image">
-                    <a href="blog-detail.html" class="d-block"><img src="https://lipsum.app/600x400" alt="" /></a>
-                  </div>
-                  <div class="card-body p-13 md-p-11">
-                    <a href="blog-detail.html" class="card-title mb-15px fw-600 fs-20 text-dark-gray d-inline-block">The impact of e-Commerce on logistics.</a>
-                    <p>Lorem ipsum has been industry standard dummy text ever...</p>
-                    <div class="author d-flex justify-content-center align-items-center position-relative overflow-hidden fs-16">
-                      <div class="me-auto">
-                        <span class="blog-date d-inline-block text-dark-gray fw-600">28 Jul 2024</span>
-                        <div class="d-inline-block author-name">By <a href="blog-detail.html" class="text-dark-gray text-decoration-line-bottom fw-600">Hugh macleod</a></div>
-                      </div>
-                      <div class="like-count fs-15 fw-600">
-                        <a href="blog-detail.html"><i class="fa-regular fa-heart text-red"></i><span class="text-dark-gray align-middle">25</span></a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </li>
-              <!-- end blog item -->
-              <!-- start blog item -->
-              <li class="grid-item">
-                <div class="card border-0 border-radius-4px box-shadow-quadruple-large">
-                  <div class="blog-image">
-                    <a href="blog-detail.html" class="d-block"><img src="https://lipsum.app/600x400" alt="" /></a>
-                  </div>
-                  <div class="card-body p-13 md-p-11">
-                    <a href="blog-detail.html" class="card-title mb-15px fw-600 fs-20 text-dark-gray d-inline-block">The future of autonomous vehicles in logistics.</a>
-                    <p>Lorem ipsum has been industry standard dummy text ever...</p>
-                    <div class="author d-flex justify-content-center align-items-center position-relative overflow-hidden fs-16">
-                      <div class="me-auto">
-                        <span class="blog-date d-inline-block text-dark-gray fw-600">26 Jul 2024</span>
-                        <div class="d-inline-block author-name">By <a href="blog-detail.html" class="text-dark-gray text-decoration-line-bottom fw-600">Walton smith</a></div>
-                      </div>
-                      <div class="like-count fs-15 fw-600">
-                        <a href="blog-detail.html"><i class="fa-regular fa-heart text-red"></i><span class="text-dark-gray align-middle">30</span></a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </li>
-              <!-- end blog item -->
-              <li class="grid-item">
-                <div class="card border-0 border-radius-4px box-shadow-quadruple-large">
-                  <div class="blog-image">
-                    <a href="blog-detail.html" class="d-block"><img src="https://lipsum.app/600x400" alt="" /></a>
-                  </div>
-                  <div class="card-body p-13 md-p-11">
-                    <a href="blog-detail.html" class="card-title mb-15px fw-600 fs-20 text-dark-gray d-inline-block">Collaborative logistics partnerships.</a>
-                    <p>Lorem ipsum has been industry standard dummy text ever...</p>
-                    <div class="author d-flex justify-content-center align-items-center position-relative overflow-hidden fs-16">
-                      <div class="me-auto">
-                        <span class="blog-date d-inline-block text-dark-gray fw-600">30 Jul 2024</span>
-                        <div class="d-inline-block author-name">By <a href="blog-detail.html" class="text-dark-gray text-decoration-line-bottom fw-600">Den viliamson</a></div>
-                      </div>
-                      <div class="like-count fs-15 fw-600">
-                        <a href="blog-detail.html"><i class="fa-regular fa-heart text-red"></i><span class="text-dark-gray align-middle">65</span></a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </li>
-              <!-- end blog item -->
-              <!-- start blog item -->
-              <li class="grid-item">
-                <div class="card border-0 border-radius-4px box-shadow-quadruple-large">
-                  <div class="blog-image">
-                    <a href="blog-detail.html" class="d-block"><img src="https://lipsum.app/600x400" alt="" /></a>
-                  </div>
-                  <div class="card-body p-13 md-p-11">
-                    <a href="blog-detail.html" class="card-title mb-15px fw-600 fs-20 text-dark-gray d-inline-block">Innovations in warehouse management systems.</a>
-                    <p>Lorem ipsum has been industry standard dummy text ever...</p>
-                    <div class="author d-flex justify-content-center align-items-center position-relative overflow-hidden fs-16">
-                      <div class="me-auto">
-                        <span class="blog-date d-inline-block text-dark-gray fw-600">28 Jul 2024</span>
-                        <div class="d-inline-block author-name">By <a href="blog-detail.html" class="text-dark-gray text-decoration-line-bottom fw-600">Hugh macleod</a></div>
-                      </div>
-                      <div class="like-count fs-15 fw-600">
-                        <a href="blog-detail.html"><i class="fa-regular fa-heart text-red"></i><span class="text-dark-gray align-middle">25</span></a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </li>
-              <!-- end blog item -->
-              <!-- start blog item -->
-              <li class="grid-item">
-                <div class="card border-0 border-radius-4px box-shadow-quadruple-large">
-                  <div class="blog-image">
-                    <a href="blog-detail.html" class="d-block"><img src="https://lipsum.app/600x400" alt="" /></a>
-                  </div>
-                  <div class="card-body p-13 md-p-11">
-                    <a href="blog-detail.html" class="card-title mb-15px fw-600 fs-20 text-dark-gray d-inline-block">Importance of visibility in supply chain.</a>
-                    <p>Lorem ipsum has been industry standard dummy text ever...</p>
-                    <div class="author d-flex justify-content-center align-items-center position-relative overflow-hidden fs-16">
-                      <div class="me-auto">
-                        <span class="blog-date d-inline-block text-dark-gray fw-600">26 Jul 2024</span>
-                        <div class="d-inline-block author-name">By <a href="blog-detail.html" class="text-dark-gray text-decoration-line-bottom fw-600">Walton smith</a></div>
-                      </div>
-                      <div class="like-count fs-15 fw-600">
-                        <a href="blog-detail.html"><i class="fa-regular fa-heart text-red"></i><span class="text-dark-gray align-middle">30</span></a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </li>
-              <!-- end blog item -->
             </ul>
           </div>
         </div>
