--- a/our-values.html
+++ b/our-values.html
@@ -177,27 +177,37 @@
       <div class="container">
         <div class="row justify-content-center" data-anime='{ "el": "childs", "translateY": [50, 0], "opacity": [0,1], "duration": 1200, "delay": 0, "staggervalue": 150, "easing": "easeOutQuad" }'>
           <div class="col-lg-10 mb-6 sm-mb-35px last-paragraph-no-margin text-center">
-            <img src="https://via.placeholder.com/987x550" class="mb-20px" alt="" />
+            <img src="images/kurumsal/değerlerimiz/değerlerimiz.jpg" class="mb-20px" alt="" />
             <div class="h-1px w-100 bg-extra-medium-gray"></div>
           </div>
           <div class="col-lg-10 mb-6 sm-mb-35px last-paragraph-no-margin">
-            <h5 class="alt-font fw-600 text-dark-gray w-95 md-w-100">Fashion you can buy but style you possess. The key to style is learning who you are which takes years</h5>
+            <h5 class="alt-font fw-600 text-dark-gray w-95 md-w-100">Samimiyet</h5>
             <p class="w-90 lg-w-100">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut nim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non , sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error.
+              Yaptığımız her işi severek, sahiplenerek, sadakatle ve müşteri memnuniyetini ön planda tutarak gerçekleştiririz.
             </p>
           </div>
           
-          <div class="col-lg-10 last-paragraph-no-margin">
-            <p class="mb-6 w-90 lg-w-100">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error.
-            </p>
+          <div class="col-lg-10 mb-6 sm-mb-35px last-paragraph-no-margin">
+            <h5 class="alt-font fw-600 text-dark-gray w-95 md-w-100">Güvenilirlik</h5>
             <p class="w-90 lg-w-100">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non.
+              Güven bizim için olmazsa olmaz bir erdemdir. Müşterilerimize karşı A'dan Z'ye her aşamada hizmet kalitesine uygun dürüst ve şeffaf bir yönetim anlayışına sahibiz. Müşterilerimiz sipariş sonrası üretiminden sevkine kadar her aşamada bilgilendiririz.
             </p>
           </div>
+
+          <div class="col-lg-10 mb-6 sm-mb-35px last-paragraph-no-margin">
+            <h5 class="alt-font fw-600 text-dark-gray w-95 md-w-100">Kararlılık</h5>
+            <p class="w-90 lg-w-100">
+              Tüm faaliyetlerimizi sürdürülebilirlik prensibine bağlı olarak başlar, geliştirir ve sonuçlandırırız.
+            </p>
+          </div>
+
+          <div class="col-lg-10 mb-6 sm-mb-35px last-paragraph-no-margin">
+            <h5 class="alt-font fw-600 text-dark-gray w-95 md-w-100">Kalite</h5>
+            <p class="w-90 lg-w-100">
+              Satışını gerçekleştirdiğimiz tüm ürünlerde müşteri memnuniyetini gözeterek kaliteli, kullanışlı ürün üretmek ve satış sonrası destek sunmak temel prensibimizdir.
+            </p>
+          </div>
+
         </div>
       </div>
     </section>
