--- a/sss.html
+++ b/sss.html
@@ -179,7 +179,7 @@
     </section>
 
     <section class="pages__img">
-        <img src="https://lipsum.app/1200x600" alt="">
+        <img src="images/kurumsal/sss/sss.jpg" alt="">
     </section>
 
     <section class="big-section">
@@ -197,12 +197,12 @@
               <div class="accordion-item active-accordion">
                 <div class="accordion-header border-bottom border-color-extra-medium-gray">
                   <a href="#" data-bs-toggle="collapse" data-bs-target="#accordion-style-02-01" aria-expanded="true" data-bs-parent="#accordion-style-02">
-                    <div class="accordion-title mb-0 position-relative text-dark-gray pe-30px"><i class="feather icon-feather-chevron-up icon-extra-medium"></i><span class="fw-600 fs-18">How long is this site live?</span></div>
+                    <div class="accordion-title mb-0 position-relative text-dark-gray pe-30px"><i class="feather icon-feather-chevron-up icon-extra-medium"></i><span class="fw-600 fs-18">İhracata ilk nereden başlamalıyız?</span></div>
                   </a>
                 </div>
                 <div id="accordion-style-02-01" class="accordion-collapse collapse show" data-bs-parent="#accordion-style-02">
                   <div class="accordion-body last-paragraph-no-margin border-bottom border-color-light-medium-gray">
-                    <p>Lorem ipsum is simply dummy text of the printing and typesetting industry lorem ipsum has been the industry's standard dummy text ever unknown printer.</p>
+                    <p>Öncelikle firma ve ürünümüzü iyi analiz edip ihracata hedef pazara uygun olup olmadığına bakarak yeterli alt, yetkin personel, gerekli kalite belgelerine sahip miyiz bakarak.</p>
                   </div>
                 </div>
               </div>
@@ -211,12 +211,12 @@
               <div class="accordion-item">
                 <div class="accordion-header border-bottom border-color-extra-medium-gray">
                   <a href="#" data-bs-toggle="collapse" data-bs-target="#accordion-style-02-02" aria-expanded="false" data-bs-parent="#accordion-style-02">
-                    <div class="accordion-title mb-0 position-relative text-dark-gray pe-30px"><i class="feather icon-feather-chevron-down icon-extra-medium"></i><span class="fw-600 fs-18">Can i install/upload anything is want on there?</span></div>
+                    <div class="accordion-title mb-0 position-relative text-dark-gray pe-30px"><i class="feather icon-feather-chevron-down icon-extra-medium"></i><span class="fw-600 fs-18">Herkes ihracatçı olabilir mi?</span></div>
                   </a>
                 </div>
                 <div id="accordion-style-02-02" class="accordion-collapse collapse" data-bs-parent="#accordion-style-02">
                   <div class="accordion-body last-paragraph-no-margin border-bottom border-color-light-medium-gray">
-                    <p>Lorem ipsum is simply dummy text of the printing and typesetting industry lorem ipsum has been the industry's standard dummy text ever unknown printer.</p>
+                    <p>İhracat yapabilmek için tek vergi numarası ve İhracatçı Birliğine kayıt yeterlidir. Şahıs ve ortaklı tüm şirketler ihracat yapabilir.</p>
                   </div>
                 </div>
               </div>
@@ -225,12 +225,12 @@
               <div class="accordion-item">
                 <div class="accordion-header border-bottom border-color-light-medium-gray">
                   <a href="#" data-bs-toggle="collapse" data-bs-target="#accordion-style-02-03" aria-expanded="false" data-bs-parent="#accordion-style-02">
-                    <div class="accordion-title mb-0 position-relative text-dark-gray pe-30px"><i class="feather icon-feather-chevron-down icon-extra-medium"></i><span class="fw-600 fs-18">How can i migrate to another site?</span></div>
+                    <div class="accordion-title mb-0 position-relative text-dark-gray pe-30px"><i class="feather icon-feather-chevron-down icon-extra-medium"></i><span class="fw-600 fs-18">Ayakkabılar gerçekten deri mi?</span></div>
                   </a>
                 </div>
                 <div id="accordion-style-02-03" class="accordion-collapse collapse" data-bs-parent="#accordion-style-02">
                   <div class="accordion-body last-paragraph-no-margin border-bottom border-color-light-medium-gray">
-                    <p>Lorem ipsum is simply dummy text of the printing and typesetting industry lorem ipsum has been the industry's standard dummy text ever unknown printer.</p>
+                    <p>Tüm Ürünlerimiz hakiki deridir. Kendi imalatımızdır.</p>
                   </div>
                 </div>
               </div>
@@ -239,12 +239,12 @@
               <div class="accordion-item">
                 <div class="accordion-header border-bottom border-color-transparent">
                   <a href="#" data-bs-toggle="collapse" data-bs-target="#accordion-style-02-04" aria-expanded="false" data-bs-parent="#accordion-style-02">
-                    <div class="accordion-title mb-0 position-relative text-dark-gray pe-30px"><i class="feather icon-feather-chevron-down icon-extra-medium"></i><span class="fw-600 fs-18">Can i change the domain you give me?</span></div>
+                    <div class="accordion-title mb-0 position-relative text-dark-gray pe-30px"><i class="feather icon-feather-chevron-down icon-extra-medium"></i><span class="fw-600 fs-18">Ayakkabı için minimum sipariş kaç çift?</span></div>
                   </a>
                 </div>
                 <div id="accordion-style-02-04" class="accordion-collapse collapse" data-bs-parent="#accordion-style-02">
                   <div class="accordion-body last-paragraph-no-margin border-bottom border-color-transparent">
-                    <p>Lorem ipsum is simply dummy text of the printing and typesetting industry lorem ipsum has been the industry's standard dummy text ever unknown printer.</p>
+                    <p>Minimum sipariş miktarı 1000 çifttir.</p>
                   </div>
                 </div>
               </div>
