--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
               <li class="grid-item">
                 <div class="card border-0 border-radius-4px box-shadow-quadruple-large">
                   <div class="blog-image">
-                    <a href="blog-detail.html" class="d-block"><img src="https://lipsum.app/600x400" alt="" /></a>
+                    <a href="blog-detail.html" class="d-block"><img src="images/blog/blog.jpg" alt="" /></a>
                   </div>
                   <div class="card-body p-13 md-p-11">
                     <a href="blog-detail.html" class="card-title mb-15px fw-600 fs-20 text-dark-gray d-inline-block">Trends shaping the logistics and transportation industry.</a>
@@ -635,7 +635,7 @@
               <li class="grid-item">
                 <div class="card border-0 border-radius-4px box-shadow-quadruple-large">
                   <div class="blog-image">
-                    <a href="blog-detail.html" class="d-block"><img src="https://lipsum.app/600x400" alt="" /></a>
+                    <a href="blog-detail.html" class="d-block"><img src="images/blog/blog.jpg" alt="" /></a>
                   </div>
                   <div class="card-body p-13 md-p-11">
                     <a href="blog-detail.html" class="card-title mb-15px fw-600 fs-20 text-dark-gray d-inline-block">Technology integration in logistics processes.</a>
@@ -656,7 +656,7 @@
               <li class="grid-item">
                 <div class="card border-0 border-radius-4px box-shadow-quadruple-large">
                   <div class="blog-image">
-                    <a href="blog-detail.html" class="d-block"><img src="https://lipsum.app/600x400" alt="" /></a>
+                    <a href="blog-detail.html" class="d-block"><img src="images/blog/blog.jpg" alt="" /></a>
                   </div>
                   <div class="card-body p-13 md-p-11">
                     <a href="blog-detail.html" class="card-title mb-15px fw-600 fs-20 text-dark-gray d-inline-block">Global trade & logistics and transport strategies.</a>
