--- a/about.html
+++ b/about.html
@@ -175,17 +175,16 @@
     </section>
 
     <section>
-      <div class="container">
+      <div class="container ">
         <div class="row justify-content-center" data-anime='{ "el": "childs", "translateY": [50, 0], "opacity": [0,1], "duration": 1200, "delay": 0, "staggervalue": 150, "easing": "easeOutQuad" }'>
-          <div class="col-lg-10 mb-6 sm-mb-35px last-paragraph-no-margin text-center">
-            <img src="images/kurumsal/hakkimizda/hakkımızda.jpg" class="mb-20px" alt="" />
-            <div class="h-1px w-100 bg-extra-medium-gray"></div>
+          <div class="col-lg-10 sm-mb-35px last-paragraph-no-margin text-center">
+            <img src="images/kurumsal/hakkimizda/hakkımızda.jpg" alt="" />
           </div>
         </div>
       </div>
     </section>
 
-    <section class="half-section pb-0">
+    <section class="half-section pb-0 pt-0">
       <div class="container">
         <div class="row justify-content-center" data-anime='{ "el": "childs", "translateY": [50, 0], "opacity": [0,1], "duration": 1200, "delay": 0, "staggervalue": 150, "easing": "easeOutQuad" }'>
           <div class="col-lg-9 last-paragraph-no-margin">
@@ -200,7 +199,7 @@
       </div>
     </section>
 
-    <section class="pb-0 pt-3">
+    <section class="pt-3">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-9 dropcap-style-01" data-anime='{ "el": "childs", "translateY": [50, 0], "opacity": [0,1], "duration": 1200, "delay": 0, "staggervalue": 150, "easing": "easeOutQuad" }'>
