--- a/our-values.html
+++ b/our-values.html
@@ -7,15 +7,15 @@
     <meta name="author" content="ThemeZaa" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <meta name="description" content="Elevate your online presence with Crafto - a modern, versatile, multipurpose Bootstrap 5 responsive HTML5, SCSS template using highly creative 48+ ready demos." />
-    <!-- favicon icon -->
+
     <link rel="shortcut icon" href="images/favicon.png" />
     <link rel="apple-touch-icon" href="images/apple-touch-icon-57x57.png" />
     <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png" />
     <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png" />
-    <!-- google fonts preconnect -->
+
     <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <!-- style sheets and font icons  -->
+
     <link rel="stylesheet" href="css/vendors.min.css" />
     <link rel="stylesheet" href="css/icon.min.css" />
     <link rel="stylesheet" href="css/style.css" />
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="demos/decor-store/decor-store.css" />
     <link rel="stylesheet" href="css/custom.css">
   </head>
+
   <body data-mobile-nav-style="classic">
     <header class="header-with-topbar">
       <div class="header-top-bar top-bar-light bg-white disable-fixed border-bottom border-color-transparent-dark-very-light topbar__bg--color">
@@ -173,12 +174,11 @@
       </div>
     </section>
     
-    <section>
+    <section class="pb-0">
       <div class="container">
         <div class="row justify-content-center" data-anime='{ "el": "childs", "translateY": [50, 0], "opacity": [0,1], "duration": 1200, "delay": 0, "staggervalue": 150, "easing": "easeOutQuad" }'>
           <div class="col-lg-10 mb-6 sm-mb-35px last-paragraph-no-margin text-center">
             <img src="images/kurumsal/değerlerimiz/değerlerimiz.jpg" class="mb-20px" alt="" />
-            <div class="h-1px w-100 bg-extra-medium-gray"></div>
           </div>
           <div class="col-lg-10 mb-6 sm-mb-35px last-paragraph-no-margin">
             <h5 class="alt-font fw-600 text-dark-gray w-95 md-w-100">Samimiyet</h5>
