--- a/contact.html
+++ b/contact.html
@@ -176,7 +176,17 @@
       </div>
     </section>
 
-    <section class="overflow-hidden">
+    <section class="bg-very-light-gray p-0">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-12 p-0">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62146.976869330574!2d27.35245703607469!3d38.62381633377658!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14b99c89950e89d5%3A0x88eb6a1c97102924!2sManisa%2C%20Yunusemre%2FManisa!5e1!3m2!1str!2str!4v1728683375169!5m2!1str!2str" width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="overflow-hidden pb-0">
       <div class="container">
         <div class="row justify-content-center align-items-center mb-9 sm-mb-45px">
           <div class="col-xxl-5 col-lg-6 md-mb-50px" data-anime='{ "el": "childs", "translateX": [-50, 0], "opacity": [0,1], "duration": 1200, "delay": 0, "staggervalue": 150, "easing": "easeOutQuad" }'>
@@ -249,16 +259,6 @@
               </form>
               <div class="position-absolute bottom-0px right-minus-30px fs-350 lh-100 fw-900 text-yellow">&lt;</div>
             </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="bg-very-light-gray p-0">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-12 p-0">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62146.976869330574!2d27.35245703607469!3d38.62381633377658!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14b99c89950e89d5%3A0x88eb6a1c97102924!2sManisa%2C%20Yunusemre%2FManisa!5e1!3m2!1str!2str!4v1728683375169!5m2!1str!2str" width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
         </div>
       </div>
