--- a/our-documents.html
+++ b/our-documents.html
@@ -177,15 +177,14 @@
     <section>
       <div class="container">
         <div class="row justify-content-center" data-anime='{ "el": "childs", "translateY": [50, 0], "opacity": [0,1], "duration": 1200, "delay": 0, "staggervalue": 150, "easing": "easeOutQuad" }'>
-          <div class="col-lg-10 mb-6 sm-mb-35px last-paragraph-no-margin text-center">
+          <div class="col-lg-10 sm-mb-35px last-paragraph-no-margin text-center">
             <img src="images/kurumsal/belgelerimiz/belgelerimiz.jpg" class="mb-20px" alt="" />
-            <div class="h-1px w-100 bg-extra-medium-gray"></div>
           </div>
         </div>
       </div>
     </section>
 
-    <section>
+    <section class="pt-0">
       <div class="container">
         <div class="row">
           <div class="col-12 filter-content">
