--- a/blog.html
+++ b/blog.html
@@ -162,20 +162,8 @@
       </nav>
     </header>
 
-    <section class="page-title-center-alignment cover-background" style="background-image: url(images/demo-decor-store-title-bg.jpg)">
-      <div class="container">
-        <div class="row">
-          <div class="col-12 text-center position-relative page-title-extra-large">
-            <h1 class="alt-font d-inline-block fw-700 ls-minus-05px text-base-color mb-10px mt-3 md-mt-50px">Blog</h1>
-          </div>
-          <div class="col-12 breadcrumb breadcrumb-style-01 d-flex justify-content-center">
-            <ul>
-              <li><a href="demo-decor-store.html">Anasayfa</a></li>
-              <li>Blog</li>
-            </ul>
-          </div>
-        </div>
-      </div>
+    <section class="pages__title">
+      <h1 class="pages__title--fs">Blog</h1>
     </section>
 
     <section>
