--- a/contact.html
+++ b/contact.html
@@ -160,20 +160,8 @@
       </nav>
     </header>
 
-    <section class="page-title-center-alignment cover-background top-space-padding" style="background-image: url(images/demo-decor-store-title-bg.jpg)">
-      <div class="container">
-        <div class="row">
-          <div class="col-12 text-center position-relative page-title-extra-large">
-            <h1 class="alt-font d-inline-block fw-700 ls-minus-05px text-base-color mb-10px mt-3 md-mt-50px">İletişim</h1>
-          </div>
-          <div class="col-12 breadcrumb breadcrumb-style-01 d-flex justify-content-center">
-            <ul>
-              <li><a href="index.html">Anasayfa</a></li>
-              <li>İletişim</li>
-            </ul>
-          </div>
-        </div>
-      </div>
+    <section class="pages__title">
+      <h1 class="pages__title--fs">İletişim</h1>
     </section>
 
     <section class="bg-very-light-gray p-0">
