--- a/institutional.html
+++ b/institutional.html
@@ -176,8 +176,10 @@
               <li class="grid-item selected digital web transition-inner-all">
                 <div class="portfolio-box border-radius-4px">
                   <div class="portfolio-image border-radius-4px">
-                    <img src="images/kurumsal/hakkımızda.jpg" alt="" />
-                    <div class="portfolio-hover d-flex justify-content-center flex-column"></div>
+                    <a href="about.html">
+                      <img src="images/kurumsal/hakkımızda.jpg" alt="" />
+                      <div class="portfolio-hover d-flex justify-content-center flex-column"></div>
+                    </a>
                   </div>
                   <div class="portfolio-caption pt-30px pb-30px lg-pt-20px lg-pb-20px">
                     <a href="about.html" class="fs-17 fw-600 text-dark-gray text-dark-gray-hover">Hakkımızda</a>
@@ -189,8 +191,10 @@
               <li class="grid-item selected web branding transition-inner-all">
                 <div class="portfolio-box border-radius-4px">
                   <div class="portfolio-image border-radius-4px">
-                    <img src="images/kurumsal/değerlerimiz.jpg" alt="" />
-                    <div class="portfolio-hover d-flex justify-content-center flex-column"></div>
+                    <a href="our-values.html">
+                      <img src="images/kurumsal/değerlerimiz.jpg" alt="" />
+                      <div class="portfolio-hover d-flex justify-content-center flex-column"></div>
+                    </a>
                   </div>
                   <div class="portfolio-caption pt-30px pb-30px lg-pt-20px lg-pb-20px">
                     <a href="our-values.html" class="fs-17 fw-600 text-dark-gray text-dark-gray-hover">Değerlerimiz</a>
@@ -202,8 +206,10 @@
               <li class="grid-item web digital transition-inner-all">
                 <div class="portfolio-box border-radius-4px">
                   <div class="portfolio-image border-radius-4px">
-                    <img src="images/kurumsal/belgelerimiz.jpg" alt="" />
-                    <div class="portfolio-hover d-flex justify-content-center flex-column"></div>
+                    <a href="our-documents.html">
+                      <img src="images/kurumsal/belgelerimiz.jpg" alt="" />
+                      <div class="portfolio-hover d-flex justify-content-center flex-column"></div>
+                    </a>
                   </div>
                   <div class="portfolio-caption pt-30px pb-30px lg-pt-20px lg-pb-20px">
                     <a href="our-documents.html" class="fs-17 fw-600 text-dark-gray text-dark-gray-hover">Belgelerimiz</a>
@@ -215,8 +221,10 @@
               <li class="grid-item web branding transition-inner-all">
                 <div class="portfolio-box border-radius-4px">
                   <div class="portfolio-image border-radius-4px">
-                    <img src="images/kurumsal/sss.jpg" alt="" />
-                    <div class="portfolio-hover d-flex justify-content-center flex-column"></div>
+                    <a href="sss.html">
+                      <img src="images/kurumsal/sss.jpg" alt="" />
+                      <div class="portfolio-hover d-flex justify-content-center flex-column"></div>
+                    </a>
                   </div>
                   <div class="portfolio-caption pt-30px pb-30px lg-pt-20px lg-pb-20px">
                     <a href="sss.html" class="fs-17 fw-600 text-dark-gray text-dark-gray-hover">Sıkça Sorulan Sorular</a>
@@ -224,7 +232,6 @@
                   </div>
                 </div>
               </li>
-
             </ul>
           </div>
         </div>
