--- a/shop.html
+++ b/shop.html
@@ -151,6 +151,32 @@
                 <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
                 <li class="nav-item"><a href="contact.html" class="nav-link">İletişim</a></li>
               </ul>
+              <ul class="mobile__menu--flag">
+                <li>
+                  <a href="index.html" class="mobile__flag--df">
+                    <img src="images/country-flag-16X16/Turkey.png" alt="" />
+                    <p class="mobile__flag--fs">Türkçe</p>
+                  </a>
+                </li>
+                <li>
+                  <a href="index.html" class="mobile__flag--df">
+                    <img src="images/country-flag-16X16/england.png" alt="" />
+                    <p class="mobile__flag--fs">İngilizce</p>
+                  </a>
+                </li>
+                <li>
+                  <a href="index.html" class="mobile__flag--df">
+                    <img src="images/country-flag-16X16/Azerbaijan.png" alt="" />
+                    <p class="mobile__flag--fs">Azerbaycan</p>
+                  </a>
+                </li>
+                <li>
+                  <a href="index.html" class="mobile__flag--df">
+                    <img src="images/country-flag-16X16/Saudi Arabia.png" alt="" />
+                    <p class="mobile__flag--fs">Sudi Arabistan</p>
+                  </a>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
