--- a/sss.html
+++ b/sss.html
@@ -84,66 +84,66 @@
                       <div class="row row-cols-2 row-cols-lg-6 row-cols-sm-3 md-pt-15px align-items-center justify-content-center mb-60px md-mb-30px sm-mb-0">
                         <div class="col md-mb-30px">
                           <a href="shop.html" class="text-center">
-                            <img src="https://lipsum.app/170x165" alt="" />
+                            <img src="images/header/header-1.jpg" alt="" />
                           </a>
                           <a href="shop.html" class="btn btn-hover-animation text-uppercase-inherit fw-600 ls-0px justify-content-center">
                             <span>
-                              <span class="btn-text text-dark-gray fs-16">Ayakkabı</span>
+                              <span class="btn-text text-dark-gray fs-16">Ürün-1</span>
                               <span class="btn-icon"><i class="fa-solid fa-arrow-right m-0"></i></span>
                             </span>
                           </a>
                         </div>
                         <div class="col md-mb-30px">
                           <a href="shop.html" class="text-center">
-                            <img src="https://lipsum.app/170x165" alt="" />
+                            <img src="images/header/header-2.jpg" alt="" />
                           </a>
                           <a href="shop.html" class="btn btn-hover-animation text-uppercase-inherit fw-600 ls-0px justify-content-center">
                             <span>
-                              <span class="btn-text text-dark-gray fs-16">Mont</span>
+                              <span class="btn-text text-dark-gray fs-16">Ürün-2</span>
                               <span class="btn-icon"><i class="fa-solid fa-arrow-right m-0"></i></span>
                             </span>
                           </a>
                         </div>
                         <div class="col md-mb-30px">
                           <a href="shop.html" class="text-center">
-                            <img src="https://lipsum.app/170x165" alt="" />
+                            <img src="images/header/header-3.jpg" alt="" />
                           </a>
                           <a href="shop.html" class="btn btn-hover-animation text-uppercase-inherit fw-600 ls-0px justify-content-center">
                             <span>
-                              <span class="btn-text text-dark-gray fs-16">Lokum</span>
+                              <span class="btn-text text-dark-gray fs-16">Ürün-3</span>
                               <span class="btn-icon"><i class="fa-solid fa-arrow-right m-0"></i></span>
                             </span>
                           </a>
                         </div>
                         <div class="col md-mb-30px">
                           <a href="shop.html" class="text-center">
-                            <img src="https://lipsum.app/170x165" alt="" />
+                            <img src="images/header/header-4.jpg" alt="" />
                           </a>
                           <a href="shop.html" class="btn btn-hover-animation text-uppercase-inherit fw-600 ls-0px justify-content-center">
                             <span>
-                              <span class="btn-text text-dark-gray fs-16">Soda</span>
+                              <span class="btn-text text-dark-gray fs-16">Ürün-4</span>
                               <span class="btn-icon"><i class="fa-solid fa-arrow-right m-0"></i></span>
                             </span>
                           </a>
                         </div>
                         <div class="col md-mb-30px">
                           <a href="shop.html" class="text-center">
-                            <img src="https://lipsum.app/170x165" alt="" />
+                            <img src="images/header/header-5.jpg" alt="" />
                           </a>
                           <a href="shop.html" class="btn btn-hover-animation text-uppercase-inherit fw-600 ls-0px justify-content-center">
                             <span>
-                              <span class="btn-text text-dark-gray fs-16">Makarna</span>
+                              <span class="btn-text text-dark-gray fs-16">Ürün-5</span>
                               <span class="btn-icon"><i class="fa-solid fa-arrow-right m-0"></i></span>
                             </span>
                           </a>
                         </div>
                         <div class="col md-mb-30px">
                           <a href="shop.html" class="text-center">
-                            <img src="https://lipsum.app/170x165" alt="" />
+                            <img src="images/header/header-6.jpg" alt="" />
                           </a>
                           <a href="shop.html" class="btn btn-hover-animation text-uppercase-inherit fw-600 ls-0px justify-content-center">
                             <span>
-                              <span class="btn-text text-dark-gray fs-16">Yağ</span>
+                              <span class="btn-text text-dark-gray fs-16">Ürün-6</span>
                               <span class="btn-icon"><i class="fa-solid fa-arrow-right m-0"></i></span>
                             </span>
                           </a>
@@ -155,6 +155,32 @@
                 <li class="nav-item"><a href="e-catalog.html" class="nav-link">E-Katalog</a></li>
                 <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
                 <li class="nav-item"><a href="contact.html" class="nav-link">İletişim</a></li>
+              </ul>
+              <ul class="mobile__menu--flag">
+                <li>
+                  <a href="index.html" class="mobile__flag--df">
+                    <img src="images/country-flag-16X16/Turkey.png" alt="" />
+                    <p class="mobile__flag--fs">Türkçe</p>
+                  </a>
+                </li>
+                <li>
+                  <a href="index.html" class="mobile__flag--df">
+                    <img src="images/country-flag-16X16/england.png" alt="" />
+                    <p class="mobile__flag--fs">İngilizce</p>
+                  </a>
+                </li>
+                <li>
+                  <a href="index.html" class="mobile__flag--df">
+                    <img src="images/country-flag-16X16/Azerbaijan.png" alt="" />
+                    <p class="mobile__flag--fs">Azerbaycan</p>
+                  </a>
+                </li>
+                <li>
+                  <a href="index.html" class="mobile__flag--df">
+                    <img src="images/country-flag-16X16/Saudi Arabia.png" alt="" />
+                    <p class="mobile__flag--fs">Sudi Arabistan</p>
+                  </a>
+                </li>
               </ul>
             </div>
           </div>
